--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BACKEND_URL=br1.api.riotgames.com
+BACKEND_URL=https://ddragon.leagueoflegends.com/cdn/13.21.1/data/pt_BR
 LINKEDIN_CLIENT_ID=77c29xwsjzs8rv
 LINKEDIN_CLIENT_SECRET=YCcjkpVJ1WU482DV
 GOOGLE_CLIENT_ID=245799103909-berekbqu9iisu3ag7l3k8vmnl33hekic.apps.googleusercontent.com
