--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-BACKEND_URL=https://ddragon.leagueoflegends.com/cdn/13.21.1
-LINKEDIN_CLIENT_ID=77c29xwsjzs8rv
-LINKEDIN_CLIENT_SECRET=YCcjkpVJ1WU482DV
-GOOGLE_CLIENT_ID=245799103909-berekbqu9iisu3ag7l3k8vmnl33hekic.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-RIOT_API_KEY=RGAPI-edc0c1a5-a087-4567-a036-3c8efe883b26
-NEXTAUTH_SECRET=nAWko0DT4mM49iF0ljg831TwzTlTkHpF
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+BACKEND_URL=
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+RIOT_API_KEY=
+NEXTAUTH_SECRET=
+OPENAI_API_KEY=
