--- a/.env.template
+++ b/.env.template
@@ -3,9 +3,6 @@ LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-NEXTAUTH_SECRET=
-NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
-NEXT_PUBLIC_FRONTEND_URL=
-NEXT_PUBLIC_STRIPE_PREMIUM_PRICE_ID=
 RIOT_API_KEY=
-NEXT_PUBLIC_STRIPE_ELITE_PRICE_ID=
+NEXTAUTH_SECRET=
+OPENAI_API_KEY=
