--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.24.4",
     "next-seo": "^6.0.0",
     "nookies": "^2.5.2",
+    "openai": "^4.16.1",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.12.0",
